--- a/srcs/nginx/html/index.html
+++ b/srcs/nginx/html/index.html
@@ -70,11 +70,11 @@
 
 						<div class="flex items-center opacity-50">
 						  <div class="flex items-center space-x-3">
-							<div class="w-3 h-3 rounded-full bg-gray-400"></div>
+							<div id="game-status" class="w-3 h-3 rounded-full bg-gray-400"></div>
 							<span class="text-purple-200">Game Service</span>
 							<span class="text-gray-400 text-sm font-mono">Pending</span>
 						  </div>
-						  <button class="ml-auto text-gray-400 text-sm font-mono">test</button>
+						  <button id="start-btn" class="ml-auto text-gray-400 text-sm font-mono">test</button>
 						</div>
                         
 						<div class="flex items-center opacity-50">
