[fix] css working

--- a/srcs/nginx/html/index.html
+++ b/srcs/nginx/html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transcendence</title>
     <script src="https://cdn.tailwindcss.com"></script>
-	<script src="/tailwind.config.js"></script>
+	<!-- <script src="/tailwind.config.js"></script> -->
     <style>
         .rotate-180 {
             transform: rotate(180deg);
