--- a/srcs/nginx/html/index.html
+++ b/srcs/nginx/html/index.html
@@ -6,9 +6,27 @@
 	<title>Auth - Connexion / Inscription</title>
     <script src="https://cdn.tailwindcss.com"></script>
 	<style>
-		:root{font-family:system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;margin:0}
-		body{display:flex;align-items:center;justify-content:center;height:100vh;background:#f3f6fb;color:#111}
-		.container{display:grid;grid-template-columns:1fr 1fr;gap:24px;width:900px;max-width:96%;padding:28px}
+:root {
+    font-family: system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial;
+    margin: 0;
+}
+
+body {
+    background: #f3f6fb;
+    color: #111;
+    padding: 40px 0;
+    margin: 0;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 24px;
+    width: 900px;
+    max-width: 96%;
+    padding: 28px;
+    margin: 0 auto;  /* This centers it horizontally */
+}
 		.card{background:#fff;border-radius:10px;padding:20px;box-shadow:0 6px 18px rgba(20,30,60,0.08)}
 		h2{margin:0 0 12px;font-size:18px}
 		label{display:block;font-size:13px;margin-top:10px}
