[feat] add a route for /api/game/settings

--- a/srcs/nginx/html/index.html
+++ b/srcs/nginx/html/index.html
@@ -533,7 +533,13 @@
             id="gameBtn"
             class="w-full bg-yellow-600 text-white py-2 px-4 rounded-lg hover:bg-yellow-700 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
           >
-            Créer une session de jeu
+            Create Game
+          </button>
+          <button
+            id="sessionsListBtn"
+            class="w-full bg-yellow-600 text-white py-2 px-4 rounded-lg hover:bg-yellow-700 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
+          >
+            Join a Game
           </button>
           <div class="msg" id="gameMsg"></div>
         </div>
