--- a/srcs/nginx/src/html/index.html
+++ b/srcs/nginx/src/html/index.html
@@ -6,6 +6,24 @@
     <title>Transcendence - Auth & Game Platform</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+      .striped-disabled {
+        position: relative;
+        overflow: hidden;
+      }
+
+      .striped-disabled::after {
+        content: '';
+        position: absolute;
+        inset: 0;
+        background: repeating-linear-gradient(
+          45deg,
+          transparent,
+          transparent 10px,
+          rgba(0, 0, 0, 0.2) 10px,
+          rgba(0, 0, 0, 0.2) 20px
+        );
+        pointer-events: none;
+      }
       .error-details {
         background: #fef2f2;
         border: 1px solid #fecaca;
