feat: basic display for profile - with vite (not tested on prod) - need form, buttons and styling

--- a/srcs/nginx/index.html
+++ b/srcs/nginx/index.html
@@ -1,2 +1,3 @@
 <div class="" id="root"></div>
-<script src="/src/main.tsx"></script>
+<script type="module" src="/src/main.tsx"></script>
+<style src="/src/styles/global.css"></style>
